--- a/Linear Algebra Done Taiwan/macros.tex
+++ b/Linear Algebra Done Taiwan/macros.tex
@@ -41,6 +41,16 @@
 \newcommand{\pfi}{\originalphi} % Define \pfi to display the original \phi
 \newcommand{\diota}{\dot{\iota}}
 \newcommand{\Log}{\operatorname{Log}}
+\newcommand{\quotient}{/}
+
+
+
+
+\usepackage{enumitem}
+\newcommand{\subscript}[2]{$#1 _ #2$} % label usage 
+
+
+
 \usepackage{amsmath}
 
 \makeatletter
