--- a/Calculus Done Taiwan/Calculus_Done_Taiwan.tex
+++ b/Calculus Done Taiwan/Calculus_Done_Taiwan.tex
@@ -806,10 +806,161 @@ One may check that this forms a norm on the real vector space of linear mappings
 \end{theorem}
 Now use the fact that determinant is continuous to conclude that collection of invertible function in $\operatorname{End}_{\text{linear}}(\R^n)$ is open. 
 \begin{theorem}
+\label{THIic}
 \textbf{(Inversion is Continuous)} Let $\Omega$ be the space of invertible linear functions from $\R^n$ to itself. The mapping $\Omega\rightarrow \Omega,A \mapsto  A^{-1}$ is continuous. 
 \end{theorem}
 \begin{proof}
-Try to sue the fact that all norms are equivalent and the fact that $\R^{n^2}$ is a topological group to do such. (Not faster). So stick to the one in General Analysis. 
+Stick to the one in General Analysis. 
+\end{proof}
+\begin{theorem}
+\label{DT}
+\textbf{(Differentiability Theorem)} Suppose  $\alpha =\set{e_1,\dots ,e_n}$ is an orthonormal basis of $\R^n$, and $\beta =\set{q_1,\dots ,q_m}$ is an orthonormal basis of  $\R^m$. Suppose  $f$ maps an open set $E\subseteq\R^n$ to $\R^m$.  Then  
+\begin{align*}
+f\text{ is continuously differentiable on $E$ }\iff \partial_if_j\text{ exists and is continuous on $E$ for all $i,j$ }
+\end{align*}
+\end{theorem}
+\begin{proof}
+$(\longrightarrow)$\\
+
+Fix $i,j$. Because $f$ is differentiable on $E$, we know  $\partial_i f_j$ exists on $E$ by \myref{Theorem}{DiJ}. Fix $x \in E$. We only have to show 
+\begin{align*}
+  \vi{\partial_i f_j\text{ is continuous at $x$ }}
+\end{align*}
+Fix $\epsilon $. We wish 
+\begin{align*}
+\vi{\text{ to find }\delta\text{ such that } \abso{\partial_i f_j(y)-\partial_i f_j(x)}\leq \epsilon \text{ for all $\abso{y-x}<\delta$ }}
+\end{align*}
+Because $f$ is continuously differentaible at $x$, we know there exists  $\delta$ such that 
+\begin{align*}
+\norm{df_y-df_x}_\text{op}< \epsilon \text{ for all $\abso{y-x}\leq \delta$ }
+\end{align*}
+We claim 
+\begin{align*}
+\vi{\text{ such $\delta$ suffices }}
+\end{align*}
+By the \customref{DiJ}{the matrix representation}, we know
+\begin{align*}
+\partial_i f_j(y)-\partial_i f_j(x)=(df_y-df_x)e_i \cdot q_j
+\end{align*}
+Then by Cauchy-Inequality, we have 
+\begin{align*}
+  \abso{\partial_i f_j(y)-\partial_if_j(x)}&\leq \abso{(df_y-df_x)e_i}\\
+  &\leq \norm{df_y-df_x}_\text{op}<\epsilon \vdone
+\end{align*}
+
+$(\longleftarrow)$\\
+
+We first show 
+\begin{align*}
+\vi{f\text{ is differentiable on $E$ }}
+\end{align*}
+We first prove 
+\begin{align*}
+\olive{\forall j\in \set{1,\dots, m}, f_j:\R^n\rightarrow \R\text{ is differentiable on $E$ }\implies f\text{ is differentiable on $E$ }}
+\end{align*}
+Fix $x\in E$. We wish to prove 
+\begin{align*}
+\olive{\text{ $f$ is differentiable at $x$ }}
+\end{align*}
+Define $A:E\rightarrow \R^m$ by 
+\begin{align*}
+A(h)\triangleq \sum_{j=1}^m  (df_j)_x (h)q_j
+\end{align*}
+We claim 
+\begin{align*}
+\olive{A\text{ suffices to be the $df_x$ }}
+\end{align*}
+Using the fact $q_j$ are orthonormal, we have
+\begin{align*}
+f(x+h)-f(x)-A(h)=\sum_{j=1}^m \big(f_j(x+h)-f_j(x)-(df_j)_x(h)  \big)q_j
+\end{align*}
+This give us 
+\begin{align*}
+\lim_{h\to 0} \frac{\abso{f(x+h)-f(x)-A(h)}}{\abso{h}}&=\lim_{h\to 0} \frac{\abso{\sum_{j=1}^m \big(f_j(x+h)-f_j(x)-(df_j)_x (h) \big)q_j}}{\abso{h}}\\
+&\leq \lim_{h\to 0} \frac{\sum_{j=1}^m \abso{f_j(x+h)-f_j(x)-(df_j)_x(h)}}{\abso{h}}=0 \odone
+\end{align*}
+Fix $j \in \set{1,\dots ,m}$. We can now reduce the problem into 
+\begin{align*}
+  \vi{f_j:\R^n\rightarrow \R\text{ is differentiable on $E$ }}
+\end{align*}
+Fix $x \in E$. We wish to prove 
+\begin{align*}
+\vi{f_j\text{ is differentiable at $x$ }}
+\end{align*}
+Express $h=\sum_{i=1}^n h_ie_i$. Define $B:E\rightarrow \R$ by
+\begin{align*}
+B(h)=\sum_{i=1}^n \partial_i f_j(x)h_i
+\end{align*}
+We claim 
+\begin{align*}
+\vi{B\text{ suffices to be $(df_j)_x$ }}
+\end{align*}
+By continuity of each $\partial_i f_j$ on $E$, we can let  $\delta$ satisfy 
+\begin{align*}
+\abso{\partial_i f_j(y)-\partial_i f_j(x)}<  \frac{\epsilon }{n}  \text{ for all $y\in B_\delta(x)$  }
+\end{align*}
+We claim 
+\begin{align*}
+  \vi{\frac{\abso{f_j(y)-f_j(x)-B(y-x)}}{\abso{y-x}}\leq \epsilon \text{ for all }y \in B_\delta (x)}
+\end{align*}
+Express $y-x=\sum_{k=1}^n h_ke_k$. Define $v_0,\dots,v_n\inr^n$ by
+\begin{align*}
+v_0\triangleq 0\text{ and }v_k\triangleq \sum_{i=1}^k h_ie_i\text{ for all $k\in \set{1,\dots ,n}$ }
+\end{align*}
+Now observe
+\begin{align*}
+\frac{\abso{f_j(y)-f_j(x)-B(y-x)}}{\abso{y-x}}&=\frac{\abso{f_j(x+v_n)-f_j(x)-B(\sum_{k=1}^n h_ke_k)}}{\abso{y-x}}\\
+&=\frac{\abso{\big(\sum_{k=1}^nf_j(x+v_k)-f_j(x+v_{k-1}) \big)- \sum_{k=1}^n \partial_k f_j(x)h_k   }}{\abso{y-x}}\\
+&=\frac{\abso{\sum_{k=1}^n f_j(x+v_k)-f_j(x+v_{k-1})-\partial_k f_j(x)h_k}}{\abso{y-x}}\\
+&=\frac{\abso{\sum_{k=1}^n f_j(x+v_{k-1}+h_ke_k)-f_j(x+v_{k-1})-\partial_k f_j(x)h_k}}{\abso{y-x}}\\
+(\text{ For some $e_k\in (0,1)$ by \customref{MVT}{MVT}})\hspace{0.5cm}&=\frac{\abso{\sum_{k=1}^n \partial_k f_j(x+v_{k-1}+t_ke_k)h_k-\partial_k f_j(x)h_k}}{\abso{y-x}}\\
+&\leq \frac{\sum_{k=1}^n \abso{\big(\partial_k f_j(x+v_{k-1}+t_ke_k)-\partial_k f_j(x) \big)h_k}}{\abso{y-x}}\\
+&< \frac{\sum_{k=1}^n \frac{\epsilon }{n} \abso{h_k}}{\abso{y-x}}\leq \epsilon \vdone
+\end{align*}
+We now prove
+\begin{align*}
+\blue{f\text{ is continuously differentiable on $E$ }}
+\end{align*}
+Fix $\epsilon $ and $x\in E$. We are required 
+\begin{align*}
+\blue{\text{ to find $\delta$ such that $\norm{df_y-df_x}_\text{op}\leq \epsilon $ for all $y\in B_\delta (x)$ }}
+\end{align*}
+Note that one can define a norm $\norm{\cdot}_F$ called "Forbenius Norm" on $BL(\R^n,\R^n)$ by 
+\begin{align*}
+\norm{A}_F\triangleq \sqrt{\sum_{i=1}^n \sum_{j=1}^n a_{i,j}^2}  \text{ where }[A]_\alpha ^\beta = \begin{bmatrix}
+  a_{1,1}& \cdots & a_{n,1}\\
+  \vdots & \ddots & \vdots \\
+  a_{1,n} & \cdots & a_{n,n}  
+\end{bmatrix}
+\end{align*}
+Because \customref{ANoF}{all norms on finite-dimensional real vector spaces are equivalent}, we know there exists $M$ such that for all $x\in E$, we have 
+\begin{align*}
+\norm{df_x}_\text{op}\leq  M\norm{df_x}_F
+\end{align*}
+Because the partial derivatives are all continuous by definition, we can let $\delta$ satisfy 
+\begin{align*}
+  \big(\partial_i f_j(x+h)\big)^2-\big(\partial_i f_j(x)\big)^2< \frac{\epsilon^2 }{M^2n^2}\text{ for all $h \in B_\delta (0)$ }
+\end{align*}
+We claim 
+\begin{align*}
+\blue{\text{ such }\delta\text{ suffices }}
+\end{align*}
+Let $\abso{y-x}<\delta$. We see 
+\begin{align*}
+\norm{df_y-df_x}_\text{op}\leq M\norm{df_y -df_x}_F< M \sqrt{\sum_{i=1}^n \sum_{j=1}^n\frac{\epsilon^2 }{M^2n^2}}=\epsilon \bdone
+\end{align*}
+
+
+
+
+
+
+
+
+
+
+
+
 \end{proof}
 \section{Inverse function theorem}
 Let $X$ be a metric space. A \textbf{contraction} $f:X\rightarrow X$ is a $K$-Lipschitz function such that $K<1$.  
@@ -844,8 +995,8 @@ d(f^n(x),f^{n+k}(x))\leq K^n d(x,f^k(x))  \leq \frac{K^n}{1-K} d(x,f(x))\leq \ep
 as desired.
 \end{proof}
 \begin{theorem}
-\label{THifta}
-\textbf{(Inverse function theorem at a single point)} Let $U$ be some neighborhood of  $\textbf{a}\in \R^n$. If differentiable $\textbf{f}:U\rightarrow \R^n$ is $C^1$ at $\textbf{a}$ and has full rank Jacobian at $\textbf{a}$, then: 
+\label{THpift}
+\textbf{(Pointwise inverse function theorem)} Let $U$ be some neighborhood of  $\textbf{a}\in \R^n$. If differentiable $\textbf{f}:U\rightarrow \R^n$ is $C^1$ at $\textbf{a}$ and has full rank Jacobian at $\textbf{a}$, then: 
 \begin{enumerate}[label=(\roman*)]
   \item  $\textbf{f}$ maps some $B_\delta (\textbf{a})\subseteq U$ injectively to some open subset of $\R^n$. 
   \item Moreover, the local inverse of $\textbf{f}$ is differentiable at $\textbf{f}(\textbf{a})$. 
@@ -855,22 +1006,20 @@ as desired.
 
 \end{proof}
 \begin{corollary}
-\textbf{(Inverse function theorem)} Let $U$ be some neighborhood of $\textbf{a}$. If $C^1$ function $\textbf{f}:U\rightarrow \R^n$ has full rank Jacobian everywhere in $U$, then $\textbf{f}$ maps $U$ to some open subset $V \subseteq \R^n$ injectively, with $C^1$ inverse $\textbf{f}^{-1}:V\rightarrow U$.  
+\label{THift}
+\textbf{(Inverse function theorem)} Let $U$ be some neighborhood of $\textbf{a}$. If $C^1$ function $\textbf{f}:U\rightarrow \R^n$ has full rank Jacobian at $\textbf{a}$, then $\textbf{f}$ forms a $C^1$-diffeomorphism between some neighborhood  $W\ni \textbf{a}$ contained by $U$, and  $\textbf{f}(W)$.      
 \end{corollary}
 \begin{proof}
-Every statement of this corollary follows from \customref{THifta}{inverse function theorem at a single point}, except that $\textbf{f}^{-1}$ is $C^1$, which would follows from proving $GL_n(\R)\rightarrow GL_n(\R),A \mapsto A^{-1}$ is continuous, since 
+Because $\operatorname{GL}_n(\R)\subseteq \operatorname{M}_n(\R)$ is open and $\textbf{f}$ is $C^1$, we know there exists some neighborhood $U'\ni \textbf{a}$ contained by $U$ such that  $\textbf{f}$ has full rank Jacobian everywhere in $U'$. Applying \customref{THpift}{pointwise inverse function theorem} for every point in $U'$, we get an injective  $C^1$-function $\textbf{f}:W \rightarrow \R^n$ with differentiable inverse. To see $(\textbf{f})^{-1}:\textbf{f}(W)\rightarrow W$ is also $C^1$, just observe:  
 \begin{align*}
-\textbf{y}\mapsto d\textbf{f}^{-1}|_\textbf{y} 
+\textbf{y}\mapsto d\textbf{f}^{-1}|_\textbf{y} =   \left(\textbf{x} \mapsto (d\textbf{f}|_\textbf{x})^{-1} \right) \circ  \left(\textbf{y}\mapsto \textbf{f}^{-1}(\textbf{y}) \right)
 \end{align*}
-is the same as: 
-\begin{align*}
-\left(\textbf{y}\mapsto \textbf{f}^{-1}(\textbf{y}) \right)\circ \left(\textbf{x} \mapsto (d\textbf{f}|_\textbf{x})^{-1} \right)
-\end{align*}
-
+and recall that \customref{THIic}{$GL_n(\R)\rightarrow GL_n(\R),A \mapsto A^{-1}$ is continuous}. 
 \end{proof}
 \section{Implicit function theorem}
 \begin{theorem}
-\textbf{(Pointwise implicit function theorem)} Let $U \subseteq \R^n \times \R^m$ be open and $(\textbf{a},\textbf{b}) \in U$. Let $\textbf{f}:U\rightarrow \R^n$ be a $C^1$  function such that the matrix: 
+\label{THipft}
+\textbf{(Implicit function theorem)} Let $W \subseteq \R^n \times \R^m$ be open and $(\textbf{a},\textbf{b}) \in W$. Let $\textbf{f}:W\rightarrow \R^n$ be a $C^1$  function such that the matrix: 
 \begin{align*}
 \begin{pmatrix} 
   \frac{\partial f_1}{\partial x_1} \Big  |_{(\textbf{a},\textbf{b})} & \cdots & \frac{\partial f_1}{\partial x_n} \Big |_{(\textbf{a},\textbf{b})}  \\
@@ -878,23 +1027,53 @@ is the same as:
   \frac{\partial f_n}{\partial x_1} \Big|_{(\textbf{a},\textbf{b})} & \cdots & \frac{\partial f_n}{\partial x_n} \Big  |_{(\textbf{a},\textbf{b})} 
 \end{pmatrix}
 \end{align*}
-is invertible. Then, there exists some neighborhood $V$ of $\textbf{b}$ such that there exists a unique function $\textbf{g}:V\rightarrow \R^n$ that satisfies: 
-\begin{enumerate}[label=(\alph*)]
-  \item $\textbf{g}(\textbf{b})=\textbf{a}$.  
-  \item $\set{ \left(\textbf{g}(\textbf{y}),\textbf{y} \right)\inr^n \times \R^m: \textbf{y} \in V}\subseteq U$.  
-  \item  $\textbf{f}\left( \textbf{g}(\textbf{y}), \textbf{y} \right)= \textbf{f}(\textbf{a},\textbf{b})$ for all $\textbf{y}\in V$  
-\end{enumerate}
-Clearly, such $\textbf{g}$ had derivative  
+is invertible. Then, there exists a pair of neighborhoods $U \ni (\textbf{a},\textbf{b})$ and $V \ni \textbf{b}$ such that: For all  $\textbf{y} \in V$ there exists a unique $\textbf{x} \inr^n$ that satisfies both  $(\textbf{x},\textbf{y})\in U$ and $\textbf{f}(\textbf{x},\textbf{y})=\textbf{f}(\textbf{a},\textbf{b})$. Moreover, if we define $\textbf{g}:V \rightarrow \R^n$ by setting 
+\begin{align*}
+\textbf{f}(\textbf{g}(\textbf{y}), \textbf{y}) = \textbf{f}(\textbf{a},\textbf{b}),\quad \text{ for all }\textbf{y} \in V
+\end{align*}
+then $\textbf{g}$ will be $C^1$ and clearly make $\textbf{g}(\textbf{b})=\textbf{a}$. 
 
-$C^1$
+
 \end{theorem}
 \begin{proof}
-Define $\textbf{F}: U \rightarrow \R^n \times \R^m$ by 
+Define $\textbf{F}: W \rightarrow \R^n \times \R^m$ by 
 \begin{align*}
 \textbf{F}(\textbf{x},\textbf{y})\triangleq \left(\textbf{f}(\textbf{x},\textbf{y}),\textbf{y} \right)
 \end{align*}
+By \customref{DT}{differentiability theorem}, $\textbf{F}$ is $C^1$. Clearly, the Jacobian of $\textbf{F}$ at $\left(\textbf{a},\textbf{b}\right)$ is full rank.  We may now apply \customref{THift}{inverse function theorem} to find some smaller neighborhood $U \subseteq W$ of $\left(\textbf{a},\textbf{b} \right)$ such that: 
+\begin{enumerate}[label=(\Roman*)]
+  \item $\textbf{F}$ is injective on $U$.  
+  \item $\textbf{F}(U)\subseteq \R^n \times \R^m$ is open.
+  \item $\textbf{F}$ has full rank Jacobian everywhere in $U$.  
+  \item The local inverse $\textbf{F}^{-1}: \textbf{F}(U)\rightarrow U$ is $C^1$.   
+\end{enumerate}
+Because $\textbf{F}(U)$ is open, we know 
+\begin{align*}
+V \triangleq \set{\textbf{y} \inr^m: (\textbf{f}(\textbf{a},\textbf{b}),\textbf{y}) \in \textbf{F}(U)}\text{ is open }
+\end{align*}
+We claim such $U\ni (\textbf{a},\textbf{b})$ and  $V\ni \textbf{b}$ suffices. Fix $\textbf{y}\in V$. We are required to show the existence and uniqueness of $\textbf{x}\inr^n$ that satisfies both $(\textbf{x},\textbf{y})\in U$ and $\textbf{f}(\textbf{x},\textbf{y})=\textbf{f}(\textbf{a},\textbf{b})$. \\
 
+By definition of $V$, we know  $\left(\textbf{f}(\textbf{a},\textbf{b}), \textbf{y} \right)\in \textbf{F}(U)$. Therefore, there exist $\textbf{z}=(\textbf{z}_1,\textbf{z}_2)\in U$ such that $\textbf{F}(\textbf{z})=\left(\textbf{f}(\textbf{a},\textbf{b}),\textbf{y} \right)$. By definition of $\textbf{F}$, $\textbf{z}_1$ is the $\textbf{x}$ we are looking for. Moreover, because $\textbf{F}$ is injective on $U$, we know $\textbf{z}_1$ is the only option. We have shown the existence and uniqueness of $\textbf{x}$. It remains to prove that $\textbf{g}$ is $C^1$, which follows from \customref{DT}{differentiability theorem} and that $\left(\textbf{g}(\textbf{y}),\textbf{y} \right)=\textbf{F}^{-1}\left(\textbf{f}(\textbf{a},\textbf{b}),\textbf{y}\right)$ for all $\textbf{y}\in V$. 
 \end{proof}
+Note that $\textbf{g}$ clearly satisfies:
+    \begin{align*}
+\begin{pmatrix} 
+  \frac{\partial g_1}{\partial y_1} \Big|_{\textbf{y}} & \cdots & \frac{\partial g_1}{\partial y_m} \Big|_{\textbf{y}} \\
+  \vdots & \ddots & \vdots \\
+  \frac{\partial g_n}{\partial y_1} \Big|_{\textbf{y}} & \cdots & \frac{\partial g_n}{\partial y_m} \Big|_{\textbf{y}}
+\end{pmatrix} = -  
+\begin{pmatrix} 
+  \frac{\partial f_1}{\partial x_1} \Big  |_{(\textbf{g}(\textbf{y}),\textbf{y})} & \cdots & \frac{\partial f_1}{\partial x_n} \Big |_{(\textbf{g}(\textbf{y}),\textbf{y})}  \\
+  \vdots & \ddots & \vdots \\
+  \frac{\partial f_n}{\partial x_1} \Big|_{(\textbf{g}(\textbf{y}),\textbf{y})} & \cdots & \frac{\partial f_n}{\partial x_n} \Big  |_{(\textbf{g}(\textbf{y}),\textbf{y})} 
+\end{pmatrix}^{-1} \cdot \begin{pmatrix} 
+  \frac{\partial f_1}{\partial y_1} \Big|_{(\textbf{g}(\textbf{y}),\textbf{y})} & \cdots & \frac{\partial f_1}{\partial y_m}  \Big |_{(\textbf{g(\textbf{y})},\textbf{y})} \\
+  \vdots & \ddots & \vdots \\
+  \frac{\partial f_n}{\partial y_1} \Big|_{(\textbf{g}(\textbf{y}),\textbf{y})} & \cdots & \frac{\partial f_n}{\partial y_m}  \Big |_{(\textbf{g}(\textbf{y}),\textbf{y})} 
+\end{pmatrix}
+\end{align*}
+for all $\textbf{y} \in V$, which in particular \customref{DT}{manifest the fact that $\textbf{g}$ is $C^1$}. 
+\section{Legendre type formula}
 \section{Lagrange multiplier theorem}
 \section{Integration on manifolds}
 \chapter{NTU Math M.A. Program Entrance Exam}
@@ -968,23 +1147,51 @@ converge to $0$ as  $\textbf{x}\rightarrow \textbf{0}$. We claim it doesn't. Let
   \frac{\abso{f(\textbf{x})- f(\textbf{0})}}{\abso{\textbf{x}}}\geq  \frac{\abso{t^3}}{ \abso{2\sqrt{3}t^3+\sqrt{3} it^4} } = \frac{1}{\abso{2\sqrt{3} + \sqrt{3}it}} \rightarrow \frac{1}{2\sqrt{3}},\quad \text{ as }t \searrow 0
 \end{align*}
 \end{proof}
-\begin{question}{}{}
+\begin{question}{Inverse and implicit function theorem. Legendre transformation.}{}
 Let $f(\textbf{x},\textbf{y})\in \mathcal{C}^{\infty} (\R^n \times \R^m)$, where $\textbf{x}=(x_1,\dots ,x_n)$ denote coordinates in $\R^n$ and  $\textbf{y}= (y_1,\dots ,y_m)$ denote coordinates in $\R^m$. Suppose $f(\textbf{0},\textbf{0})=0$, $\frac{\partial f}{\partial x_j}\big|_{(\textbf{0},\textbf{0})}=0$ for all $1\leq j\leq n$, and that the $n$-by-$n$ matrix  $\left(\frac{\partial f}{\partial x_i\partial x_j} \right)\big|_{(\textbf{0},\textbf{0})}$ is invertible. 
 \begin{enumerate}[label=(\Roman*)]
   \item Show that there exists open neighborhood $V$ of  $\textbf{0}\inr^m$ and smooth $g:V\rightarrow \R^n$ such that  
     \begin{align*}
     \frac{\partial f}{\partial x_j}\bigg    |_{\left(g(\textbf{y}),\textbf{y} \right)}=0,\quad \text{ for all }\textbf{y}\in V\text{ and }j
     \end{align*} 
-    \item Show that there exists open neighborhoods $\Omega_1$ and $\Omega$ of $\textbf{0}\inr^m$ together with a smooth function $H:\Omega_1 \rightarrow \R$ that makes: 
- \begin{align*}
- &\set{\left(\textbf{x}, \frac{\partial f}{\partial x_1} \bigg|_{(\textbf{x},\textbf{0})}, \dots ,\frac{\partial f}{\partial x_n} \bigg  |_{(\textbf{x},\textbf{0})}\right)\inr^{2n}:\textbf{x} \in \Omega} \\
-   =& \set{ \left( \frac{\partial H}{\partial \xi_1} \bigg |_{\boldsymbol{\xi}} , \dots ,\frac{\partial H}{\partial \xi_n} \bigg |_{\boldsymbol{\xi}},  \boldsymbol{\xi} \right) \inr^{2n}:\xi \in \Omega_1}
- \end{align*}
+    \item Show that there exists open neighborhoods $\Omega_1,\Omega\ni\textbf{0}\inr^n$ together with a smooth function $H:\Omega_1 \rightarrow \R$ that makes: 
+ \begin{align}
+\label{EQGs1} &\set{\left(\textbf{x}, \frac{\partial f}{\partial x_1} \bigg|_{(\textbf{x},\textbf{0})}, \dots ,\frac{\partial f}{\partial x_n} \bigg  |_{(\textbf{x},\textbf{0})}\right)\inr^{2n}:\textbf{x} \in \Omega} \\
+\label{EQGs2}   =& \set{ \left( \frac{\partial H}{\partial \xi_1} \bigg |_{\boldsymbol{\xi}} , \dots ,\frac{\partial H}{\partial \xi_n} \bigg |_{\boldsymbol{\xi}},  \boldsymbol{\xi} \right) \inr^{2n}: \boldsymbol{\xi}\in \Omega_1)  }
+ \end{align}
 \end{enumerate}
 \end{question}
 \begin{proof}
+Define smooth $\textbf{h}:\R^n \times \R^m \rightarrow \R^n$ by 
+\begin{align*}
+\textbf{h}(\textbf{x},\textbf{y})\triangleq \left( \frac{\partial f}{\partial x_1} \bigg |_{(\textbf{x},\textbf{y})} , \dots ,\frac{\partial f}{\partial x_n} \bigg |_{(\textbf{x},\textbf{y})} \right)
+\end{align*}
+(I) now follows from applying \customref{THipft}{implicit function theorem} to $\textbf{h}$. For (II), first note that $\textbf{G}: \R^n \rightarrow \R^n$ defined by 
+\begin{align*}
+\textbf{G}(\textbf{x})\triangleq \left( \frac{\partial f}{\partial x_1} \bigg|_{(\textbf{x},\textbf{0})}, \dots ,\frac{\partial f}{\partial x_n} \bigg|_{(\textbf{x},\textbf{0})} \right)
+\end{align*}
+is smooth with full rank Jacobian at $\textbf{0}\inr^n$. This by \customref{THift}{inverse function theorem} implies the existence of some neighborhood $\Omega \ni \textbf{0}\in \R^n$ such that $\textbf{G}$ forms a smooth diffeomorphism between $\Omega$ and the open set $\Omega_1 \triangleq \textbf{G}(\Omega)$. Because \myref{set}{EQGs1} is the graph of $\textbf{G}$ on $\Omega$, clearly we only have to show the existence of an $H:\Omega_1\rightarrow \R $ whose gradient is exactly $\textbf{G}^{-1}:\Omega_1 \rightarrow \Omega$.\\
+
+Denote $\textbf{G}^{-1}$ by $\textbf{T}: \Omega_1\rightarrow \Omega$. We finish the proof by showing it suffices to define $H:\Omega_1 \rightarrow \R$ by 
+\begin{align*}
+H(\boldsymbol{\xi})\triangleq \left(\sum_{i=1}^n \xi_i \cdot \textbf{T}_i (\boldsymbol{\xi}) \right)  - f\left(\textbf{T}(\boldsymbol{\xi}) , \textbf{0}\right) 
+\end{align*}
+
+Fix $i$. Compute 
+ \begin{align*}
+\frac{\partial H}{\partial \xi_i} \bigg|_{\boldsymbol{\xi}}&= \frac{\partial \textbf{T}}{ \partial \xi_i} \bigg|_{\boldsymbol{\xi}} + \sum_{j\neq i} \xi_j \cdot \left(\frac{\partial \textbf{T}}{\partial \xi_i \partial \xi_j} \bigg |_{\boldsymbol{\xi}}  \right) - \sum_{j=1}^n \frac{\partial f}{\partial x_j} \bigg|_{\left(\textbf{T}(\boldsymbol{\xi}), \textbf{0} \right)}  \cdot \frac{\partial T_j}{\partial \xi_i} \bigg|_{\boldsymbol{\xi}}\\
+&= \frac{\partial \textbf{T}}{ \partial \xi_i} \bigg|_{\boldsymbol{\xi}} + \sum_{j\neq i} \xi_j \cdot \left(\frac{\partial \textbf{T}}{\partial \xi_i \partial \xi_j} \bigg |_{\boldsymbol{\xi}}  \right) - \sum_{j=1}^n \textbf{G}_j\left(\textbf{T}(\boldsymbol{\xi}) \right)  \cdot \frac{\partial T_j}{\partial \xi_i} \bigg|_{\boldsymbol{\xi}} \\
+&=  \frac{\partial \textbf{T}}{ \partial \xi_i} \bigg|_{\boldsymbol{\xi}} + \sum_{j\neq i} \xi_j \cdot \left(\frac{\partial \textbf{T}}{\partial \xi_i \partial \xi_j} \bigg |_{\boldsymbol{\xi}}  \right) - \sum_{j=1}^n \xi_j \cdot \frac{\partial T_j}{\partial \xi_i} \bigg|_{\boldsymbol{\xi}} 
+\end{align*}
 
 \end{proof}
+\begin{question}{}{}
+Define for all $k\inn$ that 
+\begin{align*}
+f_k (\textbf{x})\triangleq k^{\frac{n}{2}}\int_{\R^n} e^{-k (\abso{\textbf{x}-\textbf{y}}^2 + \abso{\textbf{x}-\textbf{y}}^4)+ i \sum_{j=1}^n x_j^2y_j } dy
+\end{align*}
+Find its limit 
+\end{question}
 \section{Year 113}
 \begin{question}{}{}
 If every closed and bounded set of a metric space $M$ is compact, does it follows that $(M,d)$ is complete?  
